# trading-strategy-bot

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  check_bot.py  check_bot_simple.py  get_channel_id.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_error_message.py  test_message_format.py  test_raw_send.py  test_telegram.py
.claude/: settings.local.json
.github/workflows/: trading_strategy.yml
docs/: LOCAL_SETUP.md  STRATEGY_EXPLANATION.md  TELEGRAM_SETUP.md
src/trading_strategy/: __init__.py  main.py
src/trading_strategy/config/: __init__.py  settings.py  stocks.py  strategy_config.py  strategy_descriptions.yaml
src/trading_strategy/data/: __init__.py  fetcher.py  models.py
src/trading_strategy/data/providers/: README.md  __init__.py  alphavantage_provider.py  base.py  yfinance_provider.py
src/trading_strategy/i18n/: __init__.py  translator.py
src/trading_strategy/i18n/locales/: en.json
src/trading_strategy/notifications/: __init__.py  message_formatter.py  telegram.py
src/trading_strategy/storage/: __init__.py  state_manager.py
src/trading_strategy/strategies/: base.py  ma120_deviation.py
